end of file newlines??

--- a/bugzee3/src/main/resources/i18n/messages_en.properties
+++ b/bugzee3/src/main/resources/i18n/messages_en.properties
@@ -1,6 +1,6 @@
 # Error page
-error.title=Your request cannot be processed
-error.subtitle=Sorry, an error has occurred.
+error.title=Broken URL, Your request cannot be processed
+error.subtitle=Sorry, an error has occurred. Not sure where to start.
 error.status=Status:
 error.message=Message:
 
